# semaphore

./: Cargo.toml  README.md  README.pt-BR.md  index.html  onboarding.html  package-lock.json  package.json  settings.html
.github/workflows/: ci.yml  release.yml
adapters/: README.md
adapters/claude-code/: README.md
adapters/codex/: README.md
adapters/copilot-cli/: README.md
adapters/cursor/: README.md
adapters/gemini-cli/: README.md
crates/sem-core/src/: config.rs  ipc.rs  lib.rs  state.rs
scripts/: build-stream-deck.mjs
src/: awaiting-input.ts  genius.ts  i18n.ts  main.ts  onboarding.ts  preview.ts  settings.css  settings.ts  sounds.ts  styles.css  themes.ts  types.ts  window-size.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
stream-deck/: README.md  README.pt-BR.md  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
stream-deck/com.semaphore.streamdeck.sdPlugin/: manifest.json
stream-deck/src/: ipc.ts  plugin.ts  state-poller.ts
stream-deck/src/actions/: semaphore-fixed-light.ts  semaphore-light.ts
