[workspace]
resolver = "2"
members = [
    "crates/sem-core",
    "crates/semctl",
    "src-tauri",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Luciano Di Isouza"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
