[package]
name = "semaphore"
version.workspace = true
description = "Floating traffic light for AI coding agents"
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "semaphore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sem-core = { path = "../crates/sem-core" }
semctl = { path = "../crates/semctl" }
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
